<resources>
    <string name="app_name">Internshala Assignment</string>
    <string name="profile">Profile</string>
    <string name="back_btn">Back_Btn</string>
    <string name="support">Support</string>
    <string name="user_profile">user_profile</string>
    <string name="andaz_kumar">andaz Kumar</string>
    <string name="member_since_dec_2020">member since Dec, 2020</string>
    <string name="get_to_know_your_vehicles_inside_out">get to know your vehicles, inside out</string>
    <string name="icon">icon</string>
    <string name="cred_garage">CRED garage</string>
    <string name="credit_score">credit score</string>
    <string name="refresh_available">• REFRESH AVAILABLE</string>
    <string name="_757">757</string>
    <string name="lifetime_cashback">lifetime cashback</string>
    <string name="_3">₹3</string>
    <string name="bank_balance">bank balance</string>
    <string name="check">check</string>
    <string name="your_rewards_amp_benefits"><![CDATA[YOUR REWARDS & BENEFITS]]></string>
    <string name="cashback_balance_0">cashback balance ₹0</string>
    <string name="coins">coins</string>
    <string name="_26_46_583">26,46,583</string>
    <string name="win_up_to_rs_1000">win up to Rs 1000</string>
    <string name="refer_and_earn">refer and earn</string>
    <string name="transactions_amp_support"><![CDATA[TRANSACTIONS & SUPPORT]]></string>
    <string name="all_transactions">all transactions</string>
</resources>