<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top Bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/ic_back"
                app:tint="@color/textPrimary" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/textPrimary"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/support"
                android:src="@drawable/ic_support"
                app:tint="@color/textPrimary" />
        </LinearLayout>

        <!-- Profile Header -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:backgroundTint="@android:color/black"
                app:cardCornerRadius="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/profile_circle_bg"
                    android:contentDescription="@string/user_profile"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile_placeholder" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_card"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/andaz_kumar"
                    android:textColor="@color/textPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_since_dec_2020"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="20dp"
                android:background="@drawable/profile_circle_bg"
                android:contentDescription="@string/icon"
                android:padding="2dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/profile_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profile_name"
                app:tint="@color/textPrimary" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- CRED Garage -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/card_design"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_garage" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_to_know_your_vehicles_inside_out"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cred_garage"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_arrow_right"
                    app:drawableTint="@android:color/white" />
            </LinearLayout>
        </LinearLayout>


        <!-- Metrics Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!-- Credit Score Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_credit_score"
                    app:tint="@color/textPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/credit_score"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/refresh_available"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_757"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/textSecondary" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textSecondary" />

            <!-- Lifetime Cashback Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_cashback"
                    app:tint="@color/textPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/lifetime_cashback"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/textSecondary" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textSecondary" />

            <!-- Bank Balance Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_bank"
                    app:tint="@color/textPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/bank_balance"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/textSecondary" />
            </LinearLayout>
        </LinearLayout>

        <!-- Divider -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/darkBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Rewards & Benefits -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_rewards_amp_benefits"
                android:textColor="@color/textSecondary"
                android:textSize="12sp" />

            <!-- Cashback Balance -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/cashback_balance_0"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textSecondary" />

            <!-- Coins -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/coins"
                    android:textColor="@color/textSecondary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_26_46_583"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textSecondary" />

            <!-- Refer & Earn -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/win_up_to_rs_1000"
                        android:textColor="@color/textPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refer_and_earn"
                        android:textColor="@color/textSecondary"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/textSecondary" />
            </LinearLayout>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="24dp"
                android:background="@color/textSecondary" />

            <!-- Transactions & Support -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactions_amp_support"
                android:textColor="@color/textSecondary"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/all_transactions"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/textSecondary" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
